--- a/app/src/main/res/layout/activity_cinema.xml
+++ b/app/src/main/res/layout/activity_cinema.xml
@@ -57,6 +57,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:gravity="right">
 
                 <CheckBox
@@ -66,7 +68,6 @@
                     android:text="Нравится"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="10dp"
                     android:textSize="18sp"
                     android:layout_weight="1" />
 
@@ -82,6 +83,7 @@
                     android:id="@+id/imageSchedule"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
+                    android:layout_marginRight="10dp"
                     android:contentDescription="Посмотреть позже"
                     android:src="@drawable/ic_baseline_access_time_24"
                     android:layout_gravity="right" />
