--- a/app/src/main/res/layout/schedule_item.xml
+++ b/app/src/main/res/layout/schedule_item.xml
@@ -67,7 +67,7 @@
         app:layout_constraintVertical_bias="0.911" />
 
     <TextView
-        android:id="@+id/dateTimeAlarm"
+        android:id="@+id/dateAlarm"
         android:layout_width="161dp"
         android:layout_height="30dp"
         android:text="DateTime"
