--- a/app/src/main/res/menu/bottom_navigate.xml
+++ b/app/src/main/res/menu/bottom_navigate.xml
@@ -3,13 +3,13 @@
     <item
         android:id="@+id/nav_cinema"
         android:icon="@drawable/ic_baseline_movie_24"
-        android:title="Фильмы" />
+        android:title="@string/cinemaListTitle" />
     <item
         android:id="@+id/nav_favourite"
         android:icon="@drawable/ic_baseline_stars_24"
-        android:title="Избранное" />
+        android:title="@string/favouriteTitle" />
     <item
         android:id="@+id/nav_Schedule"
         android:icon="@drawable/ic_baseline_notifications_24"
-        android:title="Смотреть позже" />
+        android:title="@string/scheduleTitle" />
 </menu>
